# Alien

./: .gitignore  .gitmodules  2023_01_06_00_12_51.txt  Cargo.toml  Makefile  README.md  domain-list.toml  kernel-qemu  living-update.md  rust-toolchain.toml  syscall_ebpf  test.hex  x.txt
apps/memory-game/: Cargo.toml  build.rs
apps/memory-game/src/: main.rs
apps/memory-game/ui/: memory.slint
apps/printdemo/: Cargo.toml  build.rs
apps/printdemo/src/: main.rs
apps/printdemo/ui/: printer_queue.slint  printerdemo.slint
apps/printdemo/ui/fonts/: convert.sh
apps/slint/: Cargo.toml  build.rs
apps/slint/src/: main.rs
base/domain-helper/: Cargo.toml
base/domain-helper/src/: lib.rs  sheap.rs  syscall.rs
base/domain-loader/: Cargo.toml
base/domain-loader/src/: loader.rs
base/kcore/: Cargo.toml
base/kcore/src/: lib.rs
base/kcore/src/task/: mod.rs
base/kcore/src/trap/: exception.rs  mod.rs  trampoline.asm
base/mem/: Cargo.toml
base/mem/src/: data.rs  frame.rs  heap.rs  lib.rs  vmm.rs
base/platform/: Cargo.toml  build.rs
base/platform/src/: console.rs  lib.rs  logger.rs
base/platform/src/common_riscv/: basic.rs  boot.rs  mod.rs  sbi.rs
base/platform/src/qemu_riscv/: config.rs  mod.rs
base/platform/src/starfive2_riscv/: config.rs  mod.rs
base/proxy/: Cargo.toml
base/proxy/src/: blk.rs  buf_uart.rs  empty_device.rs  fs.rs  input.rs  lib.rs  net.rs  vfs.rs
base/unwind/: Cargo.toml
base/unwind/src/: addr2line.rs  catch.rs  elf.rs  lib.rs  lsda.rs  registers.rs
boot/: Cargo.toml  build.rs  first.txt  second
boot/.cargo/: config
boot/src/: boot.asm  entry.rs  main.rs  panic.rs
dependence/double-link-list/: .gitignore  Cargo.toml
dependence/double-link-list/src/: lib.rs  main.rs
domain-tools/basic/: Cargo.toml
domain-tools/basic/src/: arch.rs  config.rs  console.rs  frame.rs  lib.rs  logging.rs  time.rs
domain-tools/corelib/: Cargo.toml
domain-tools/corelib/src/: lib.rs
domain-tools/interface/: Cargo.toml
domain-tools/interface/src/: block.rs  buf_input.rs  buf_uart.rs  cache_block.rs  devices.rs  empty_device.rs  fs.rs  gpu.rs  input_device.rs  lib.rs  logger.rs  net.rs  net_device.rs  plic.rs  rtc.rs  scheduler.rs  sd.rs  shadow_block.rs  syscall.rs  task.rs  uart.rs  vfs.rs
domain-tools/libsyscall/: Cargo.toml
domain-tools/libsyscall/src/: console.rs  frame.rs  lib.rs  logging.rs
domain-tools/malloc/: Cargo.toml
domain-tools/malloc/src/: lib.rs
domains/devices/: Cargo.toml
domains/devices/src/: block.rs  gpu.rs  lib.rs  prob.rs  rtc.rs  uart.rs
domains/extern-interrupt/: Cargo.toml
domains/extern-interrupt/src/: lib.rs
domains/fatfs/: Cargo.toml
domains/fatfs/src/: lib.rs
domains/syscall/: Cargo.toml
domains/syscall/src/: lib.rs  mm.rs
domains/task/: Cargo.toml
domains/task/src/: elf.rs  init.rs  kstack.rs  kthread.rs  lib.rs  processor.rs  resource.rs  scheduler.rs  task.rs  vfs_shim.rs  wait_queue.rs
domains/vfs/: Cargo.toml
domains/vfs/src/: kfile.rs  lib.rs  pipefs.rs  shim.rs  tree.rs
domains/vfs/src/devfs/: gpu.rs  (+8 more)
kernel/: .gitignore  Cargo.toml  build.rs
kernel/src/: config.rs  console.rs  error.rs  gui.rs  info.rs  ksync.rs  lib.rs  logging.rs  main.rs  panic.rs  sbi.rs  sys.rs  syscall.rs  system.rs  time.rs  timer.rs
kernel/src/arch/: mod.rs  riscv.rs
kernel/src/bench/: mem_block.rs  mod.rs  proxy_block.rs  unwind_block.rs
kernel/src/board/: common.rs  cv1811.rs  mod.rs  probe.rs  qemu.rs  unmatched.rs  vf2.rs
kernel/src/boot/: boot.asm  linker.ld
kernel/src/bus/: Cargo.toml  fdt.rs  mod.rs
kernel/src/device/: block.rs  gpu.rs  input.rs  mod.rs  net.rs  rtc.rs  uart.rs
kernel/src/domain/: create.rs  init.rs  mod.rs
kernel/src/domain_helper/: device.rs  mod.rs  resource.rs  sheap.rs  storage_heap.rs  syscall.rs
kernel/src/domain_loader/: creator.rs  loader.rs  mod.rs
kernel/src/domain_proxy/: blk.rs  continuation.rs  mod.rs  scheduler.rs  shadow_blk.rs
kernel/src/driver/: block_device.rs  dtb.rs  gpu.rs  hal.rs  input.rs  mod.rs  mpci.rs  net.rs  rtc.rs  uart.rs  uart1.rs
kernel/src/ebpf/: map.rs  mod.rs  transform.rs
kernel/src/fs/: basic.rs  control.rs  dbfs.rs  ext.rs  fat32.rs  file.rs  link.rs  mod.rs  poll.rs  select.rs  stdio.rs  vfs.rs
kernel/src/interrupt/: ext_interrupt.rs  mod.rs  record.rs
kernel/src/ipc/: futex.rs  mod.rs  pipe.rs  poll.rs  shm.rs  signal.rs
kernel/src/kprobe/: kprobe_test.rs  mod.rs
kernel/src/memory/: elf.rs  frame.rs  manager.rs  map.rs  mod.rs  vmm.rs
kernel/src/mm/: buddy.rs  elf.rs  frame.rs  kmalloc.rs  loader.rs  map.rs  mod.rs  slab.rs  vmm.rs
kernel/src/net/: addr.rs  mod.rs  port.rs  socket.rs  unix.rs
kernel/src/per_cpu/: mod.rs
kernel/src/perf/: ebpf.rs  kprobe.rs  mod.rs
kernel/src/print/: console.rs  logging.rs  mod.rs  uart.rs
kernel/src/sync/: condvar.rs  intrlock.rs  mod.rs  mutex.rs  rcu.rs  sleep_mutex.rs  sleeplock.rs  srcu.rs  static_keys.rs
kernel/src/task/: context.rs  continuation.rs  control.rs  cpu.rs  heap.rs  kthread.rs  mod.rs  process.rs  processor.rs  resource.rs  schedule.rs  scheduler.rs  stack.rs  task.rs  thread.rs
kernel/src/timer/: mod.rs
kernel/src/trace/: kernel_symbol.S  mod.rs
kernel/src/trap/: context.rs  exception.rs  interrupt.rs  kernel_v.asm  mod.rs  trampoline.asm
modules/input2event/: Cargo.toml
modules/input2event/src/: lib.rs
modules/pci/: Cargo.toml
modules/pci/src/: lib.rs  pcie_dw_sifive.rs
modules/simple-net/: Cargo.toml  README.md
modules/simple-net/src/: addr.rs  common.rs  device.rs  interface.rs  lib.rs  listen_table.rs  loopdevice.rs  tcp.rs  udp.rs  unix.rs
modules/simplegui/: .gitignore  Cargo.toml  Makefile  README.md
modules/simplegui/src/: lib.rs
userlib/: Cargo.toml
userlib/src/: __clone.asm  alloc.rs  common.rs  dbfs.rs  fs.rs  gui.rs  heap.rs  io.rs  lib.rs  macros.rs  memory.rs  panic.rs  process.rs  pthread.rs  socket.rs  syscall.rs  thread.rs  time.rs
userlib/src/fs/: attr.rs  mod.rs
userlib/src/io/: mod.rs  stdio.rs
userlib/src/ipc/: mod.rs
userlib/src/sys/: io.rs  mod.rs
userlib/src/time/: mod.rs
(+1012 files in other folders)
