[workspace]
members = [
    "kernel",
    "user/userlib",
    "user/apps/init",
    "user/apps/shell",
    "base/*",
    "domain-lib/*",
    "domains/generated/g*",
    "domains/drivers/*",
    "domains/common/*",
    "domains/fs/*",
    "tools/*",
    "user/apps/d*",
    "user/apps/ping",
    "user/apps/client",
    "user/apps/slint*",
    "user/apps/memory-game",
    "user/apps/out",
    "user/apps/nice"
]
resolver = "2"

[workspace.dependencies]
## unsafe basic crates
spin = "0"
log = "0"
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
core2 = { version = "0.4", default-features = false }
xmas-elf = "0.9"
lru = "0"


## safe crates
bitflags = "1.3.2"
bit_field = "0.10"
timestamp = { git = "https://github.com/Byte-OS/timestamp" }
downcast-rs = { version = "1.2.0", default-features = false }
cpio_reader = { version = "0.1.1" }
libflate = { version = "2.0.0", default-features = false }
