[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
riscv = "0.10.0"
preprint = "0.1.0"
basemachine = { path = "../modules/basemachine" }
kernel = { version = "0.1.0", path = "../kernel" }


[features]
default = []
vf2 = ["kernel/vf2"]
cv1811h = ["kernel/cv1811h"]
qemu = ["kernel/qemu"]
hifive = ["kernel/hifive"]

slab = ["kernel/slab"]
talloc = ["kernel/talloc"]
buddy = ["kernel/buddy"]

[build-dependencies]
