[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mem = { path = "../base/mem" }
platform = { path = "../base/platform" }
riscv = "0.11"
log = "0"
xmas-elf = "0.9"
pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }
spin = "0"

ksync = { path = "../domain-lib/ksync" }
arch = { path = "../domain-lib/arch" }
config = { path = "../domain-lib/config" }
rref = { path = "../domain-lib/rref" }
interface = { path = "../domain-lib/interface" }
corelib = { path = "../domain-lib/corelib" }
basic = { path = "../domain-lib/basic", features = ["task"] }
task_meta = { path = "../domain-lib/task_meta" }

vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
cpio_reader = { workspace = true }
libflate = { workspace = true }
core2 = { version = "0.4", default-features = false }
fdt = { git = "https://github.com/repnop/fdt" }
downcast-rs = { workspace = true }



[features]
default = ["smp"]
smp = ["platform/smp"]