[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../subsystems/arch" }
platform = { path = "../subsystems/platform" }
mem = { path = "../subsystems/mem" }
interrupt = { path = "../subsystems/interrupt" }
devices = { path = "../subsystems/devices" }
drivers = { path = "../subsystems/drivers" }
unwinder = { path = "../subsystems/unwinder" }
constants = { path = "../subsystems/constants" }
config = { path = "../subsystems/config" }
vfs = { path = "../subsystems/vfs" }
timer = { path = "../subsystems/timer" }
ksync = { path = "../subsystems/ksync" }
knet = { path = "../subsystems/knet" }
gmanager = { path = "../subsystems/gmanager" }
shim = { path = "../subsystems/shim", features = ["kernel"] }
kprobe = { git = "https://github.com/Godones/ext_ebpf" }
#kprobe = { path = "../../os-modules/ext_ebpf/kprobe" }


riscv = "0.10"
bit_field = "0.10"
xmas-elf = "0.9"
bitflags = "1.3"
spin = "0"
log = "0.4.21"
vfscore = { git = "https://github.com/os-module/rvfs.git", features = [
    "linux_error",
] }
syscall-table = { git = "https://github.com/os-module/syscall-table.git" }
smpscheduler = { git = "https://github.com/os-module/smpscheduler.git" }
page-table = { git = "https://github.com/os-module/page-table.git", branch = "dev" }
netcore = { git = "https://github.com/os-module/simple-net" }
small-index = { git = "https://github.com/os-module/small-index" }

[features]
default = ["smp", "test", "kprobe_test"]
qemu = ["platform/qemu_riscv", "interrupt/qemu", "mem/initrd"]
vf2 = ["platform/vf2", "interrupt/vf2", "devices/vf2", "mem/initrd"]
hifive = ["platform/hifive", "interrupt/hifive", "devices/hifive"]
smp = ["platform/smp"]

fat = ["vfs/fat"]
ext = ["vfs/ext"]

slab = []
talloc = []
buddy = []

pager_buddy = ["mem/pager_buddy"]
pager_bitmap = ["mem/pager_bitmap"]


ramdisk = ["devices/ramdisk"]
test = ["devices/test"]
kprobe_test = []