[package]
name = "Mstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
core2 = {version = "0.4.0",default-features = false,features = ["alloc","nightly"]}
spin = "0.9.2"
bitflags = "1.3.2"
jammdb = {path = "../../os-module/jammdb"}
dbop = {path = "../../os-module/dbop"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }