[package]
name = "Mstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
spin = "0.9.2"
bitflags = "1.3.2"
talc = { git = "https://github.com/SFBdragon/talc", rev = "5e478e985472695a1ae9c1ef74931ee20d5a657b" }
embedded-graphics = { version = "0.7.1", optional = true }



[features]
gui = ["embedded-graphics"]

