[package]
name = "memory-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Mstd = { path = "../../userlib", features = ["gui"] }
slint = { version = "1.0.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }
virt2slint = {git = "https://github.com/os-module/virt2slint"}
libm = "0.2.6"
rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }
slint-helper = { path = "../slint-helper" }
[build-dependencies]
slint-build = "1.0.0"