[package]
name = "slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Mstd = { path = "../../userlib" }
slint = { version = "1.0.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }
embedded-graphics = "0.7.1"
virtio-input-decoder = { path = "../../modules/virtio-input-decoder" }

[build-dependencies]
slint-build = "1.0.0"
