[package]
name = "slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Mstd = { path = "../../userlib", features = ["gui"] }
slint = { version = "1.1.1", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }
input2event = { path = "../../modules/input2event" }

[build-dependencies]
slint-build = "1.1.1"
