[package]
name = "domain-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
constants = { path = "../constants" }
corelib = { path = "../../domain-tools/corelib" }
rref = { path = "../../domain-tools/rref" }
page_table = { path = "../../safe-crates/page_table" }
memory_addr = { path = "../../safe-crates/memory_addr" }
ptable = { path = "../../safe-crates/ptable" }
domain-helper = { path = "../domain-helper" }
mem = { path = "../mem" }

xmas-elf = "0.9"
log = "0"

