[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config  = { path = "../config" }
arch = { path = "../arch" }
ksync = { path = "../ksync" }
platform = { path = "../platform" }
constants = { path = "../constants" }
page_table = { path = "../../safe-crates/page_table" }
memory_addr = { path = "../../safe-crates/memory_addr" }
ptable = { path = "../../safe-crates/ptable" }


log = "0"
talc = { version = "4" }
pager = { git = "https://github.com/os-module/pager", default-features = false, optional = true }
spin = { workspace = true }



[features]
default = ["pager_buddy",]
pager_buddy = ["pager/buddy"]
pager_bitmap = ["pager/bitmap"]