[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config  = { path = "../../domain-lib/config" }
arch = { path = "../../domain-lib/arch" }
ksync = { path = "../../domain-lib/ksync" }
platform = { path = "../platform" }
page_table = { git = "https://github.com/os-module/page-table.git", package = "page-table" }
memory_addr = { git ="https://github.com/os-module/memory_addr" }
ptable = { git = "https://github.com/os-module/vmspace", package = "vmspace" }
pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }
talc = { version = "4" }
pager = { git = "https://github.com/os-module/pager", default-features = false, optional = true }
spin = "0"
log = "0"


[features]
default = ["pager_bitmap",]
pager_buddy = ["pager/buddy"]
pager_bitmap = ["pager/bitmap"]