[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
arch = { path = "../../domain-lib/arch" }
config = { path = "../../domain-lib/config" }
spin = "0"
fdt = { git = "https://github.com/repnop/fdt" }

[features]
default = ["smp"]
smp = []