[package]
name = "double-link-list"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <chen linfeng>"]
description = "double link list"
keywords = ["double-link-list", "link", "list"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.4.4"

