[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../base/config" }
corelib = { path = "../corelib", features = ["core_impl"]}
task_meta = { path = "../task_meta" }
constants = { path = "../../base/constants" }
ksync = { path = "../../base/ksync" }
rref = { path = "../rref" }
arch = { path = "../../base/arch" }
log = "0"
pod = { workspace = true }
page_table = { path = "../../safe-crates/page_table" }
memory_addr = { path = "../../safe-crates/memory_addr" }
ptable = { path = "../../safe-crates/ptable" }
raw_plic = { path = "../../safe-crates/raw_plic" }
goldfish_rtc = { path = "../../safe-crates/goldfish_rtc" }
raw_uart16550 = { path = "../../safe-crates/raw_uart16550" }
int-enum = "1"
riscv = "0"


[features]
task = []