[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../base/config" }
corelib = { path = "../corelib", features = ["core_impl"]}
task_meta = { path = "../task_meta" }
constants = { path = "../../base/constants" }
ksync = { path = "../../base/ksync" }
rref = { path = "../rref" }
arch = { path = "../../base/arch" }
pod = { workspace = true }
memory_addr = { path = "../../safe-crates/memory_addr" }
int-enum = "1"
riscv = "0.11"
log = "0"

[features]
task = []