[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
arch = { path = "../arch" }
ksync = { path = "../ksync" }

corelib = { path = "../corelib", features = ["core_impl"]}
task_meta = { path = "../task_meta" }
rref = { path = "../rref" }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
memory_addr = { git ="https://github.com/os-module/memory_addr" }
int-enum = "1"
riscv = "0.11"
log = { version = "0", optional = true }
pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }

[features]
default = ["log"]
log = ["dep:log"]
task = []