[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rref = { path = "../rref" }
constants = { path = "../../base/constants" }
vfscore = { git = "https://github.com/os-module/rvfs.git" }
pod = { workspace = true }
[features]
domain = []
