[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rref = { path = "../rref" }
gproxy = { path = "../gproxy" }
log = "0"
task_meta = { path = "../task_meta" }
pconst = { git = "https://github.com/os-module/pconst.git", features = ["special_error"] }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
downcast-rs = { version = "1.2.0", default-features = false }

[features]
domain = []
