[package]
name = "libsyscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
continuation = { path = "../continuation" }
rref = { path = "../rref" }
interface = { path = "../interface" }
spin = "0"
log = "0"



[features]
domain = []