[package]
name = "malloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsyscall = {path = "../libsyscall"}
ksync = {path = "../../subsystems/ksync"}
buddy_system_allocator = { version = "0.9.0" }