[package]
name = "malloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../ksync" }
corelib = { path = "../corelib", features = ["core_impl"] }
rref = { path = "../rref" }
buddy_system_allocator = "0.9.0"