[package]
name = "devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malloc = { path = "../../domain-tools/malloc" }
interface = { path = "../../domain-tools/interface",default-features = false,features = ["devices","domain","cache_blk","gpu","uart","rtc"] }
rref = { path = "../../domain-tools/rref" }
libsyscall = { path = "../../domain-tools/libsyscall" ,features = ["domain"] }
ksync = { path = "../../subsystems/ksync" }
constants = { path = "../../subsystems/constants" }

vfscore = { git = "https://github.com/os-module/rvfs.git" }
spin = "0"