[package]
name = "devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malloc = { path = "../../domain-tools/malloc" }
interface = { path = "../../domain-tools/interface", default-features = false, features = ["plic"] }
rref = { path = "../../domain-tools/rref" }
libsyscall = { path = "../../domain-tools/libsyscall",features = ["domain"] }

fdt = { path = "../../safe-crates/fdt" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers"}
log = "0"