[package]
name = "devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../domain-tools/interface", default-features = false, features = ["plic"] }
rref = { path = "../../domain-tools/rref" }
basic = { path = "../../domain-tools/basic" }
constants = { path = "../../base/constants" }
ksync = { path = "../../domain-tools/safety-abstraction/ksync" }
fdt = { path = "../../safe-crates/fdt" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers"}
log = "0"