[package]
name = "extern-interrupt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../domain-tools/interface", default-features = false, features = ["plic"] }
rref = { path = "../../domain-tools/rref" }
basic = { path = "../../domain-tools/basic" }
constants = { path = "../../base/constants" }
spin = "0"
config = { path = "../../base/config" }
region = { path = "../../domain-tools/safety-abstraction/region" }
plic = { path = "../../safe-crates/plic" }
ksync = { path = "../../domain-tools/safety-abstraction/ksync" }