[package]
name = "fatfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malloc = { path = "../../domain-tools/malloc" }
interface = { path = "../../domain-tools/interface",default-features = false,features = ["fs","blk"] }
rref = { path = "../../domain-tools/rref" }
libsyscall = { path = "../../domain-tools/libsyscall" }

fat-vfs = { git = "https://github.com/os-module/rvfs.git" }
vfscore = { git = "https://github.com/os-module/rvfs.git" }
ksync = { path = "../../subsystems/ksync" }
log = "0"