[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../domain-tools/basic" }
interface = { path = "../../domain-tools/interface", default-features = false, features = ["task", "vfs", "syscall"]}
rref = { path = "../../domain-tools/rref" }
constants = { path = "../../base/constants" }



log = "0"