[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../../subsystems/ksync" }
libsyscall = { path = "../../domain-tools/libsyscall",features = ["domain"] }
rref = { path = "../../domain-tools/rref" }
interface = { path = "../../domain-tools/interface" }
malloc = { path = "../../domain-tools/malloc" }

config = { path = "../../subsystems/config" }
arch = { path = "../../subsystems/arch" }
constants = { path = "../../subsystems/constants" }

smpscheduler = { git = "https://github.com/os-module/smpscheduler.git" }
spin = "0"
log = "0"