[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../domain-tools/basic" }
interface = { path = "../../domain-tools/interface" }
rref = { path = "../../domain-tools/rref" }

small-index = { git = "https://github.com/os-module/small-index" }
spin = "0"
ksync = { path = "../../domain-tools/safety-abstraction/ksync" }
config = { path = "../../base/config" }
ptable = { path = "../../safe-crates/ptable" }
context = { path = "../../safe-crates/context" }
constants = { path = "../../base/constants" }


# now we trust the elf loader
xmas-elf = "0.9"

log = "0"