[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../../tcb/ksync" }
libsyscall = { path = "../../domain-tools/libsyscall",features = ["domain"] }
rref = { path = "../../domain-tools/rref" }
interface = { path = "../../domain-tools/interface",default-features = false, features = ["vfs"] }
malloc = { path = "../../domain-tools/malloc" }

constants = { path = "../../tcb/constants" }
spin = "0"
log = "0"
vfscore = { git = "https://github.com/os-module/rvfs.git", features = [
"linux_error",
] }
devfs = { git = "https://github.com/os-module/rvfs.git" }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
ramfs = { git = "https://github.com/os-module/rvfs.git" }
fat-vfs = { git = "https://github.com/os-module/rvfs.git"}

# it might be deleted
downcast-rs = { version = "1.2.0", default-features = false }