[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../../domain-tools/safety-abstraction/ksync" }
basic = { path = "../../domain-tools/basic" }
rref = { path = "../../domain-tools/rref" }
interface = { path = "../../domain-tools/interface" }
malloc = { path = "../../domain-tools/malloc" }

constants = { path = "../../base/constants" }
spin = "0"
log = "0"
vfscore = { git = "https://github.com/os-module/rvfs.git", features = [
"linux_error",
] }
devfs = { git = "https://github.com/os-module/rvfs.git" }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
ramfs = { git = "https://github.com/os-module/rvfs.git" }
fat-vfs = { git = "https://github.com/os-module/rvfs.git"}

# it might be deleted
downcast-rs = { version = "1.2.0", default-features = false }