[package]
name = "input2event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }
virtio-input-decoder = { path = "../../modules/virtio-input-decoder" }
