# Copyright (c) 2015 The Robigalia Project Developers
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "pci"
version = "0.1.0"
edition = "2018"
authors = ["Corey Richardson <corey@octayn.net>", "Elliott10"]
description = "Generic PCI scanning, configuration-space access, and header parsing"
repository = "https://github.com/elliott10/pci-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.3.2"
log = "0.4"

[features]
