[package]
name = "simplegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
virtio-input-decoder = "0.1.4"
tinybmp = "0.3.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.14"
spin = "0.9.2"

oorandom = "11.1.3"

[dev-dependencies]
